new select & input

--- a/currency-converter/src/App.css
+++ b/currency-converter/src/App.css
@@ -1,6 +1,11 @@
-.from-to {
+.main {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+}
+.select-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 300px;
   margin: 10px;
 }
