--- a/currency-converter/src/components/Input/style.css
+++ b/currency-converter/src/components/Input/style.css
@@ -1,19 +1,22 @@
 .container {
   position: relative;
   display: flex;
+  align-items: center;
   width: 100%;
 }
 
 .input {
+  border: 2px solid grey;
   margin-top: 10px;
   width: 100%;
-  height: 10px;
+  height: 35px;
+  font-size: large;
 }
 
 .cancel {
   position: absolute;
   display: flex;
-  align-items: center;
   bottom: 0%;
   right: 0%;
+  height: 40px;
 }
