--- a/currency-converter/src/components/Select/style.css
+++ b/currency-converter/src/components/Select/style.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  
+  width: 400px;
 }
 
 .select-header {
@@ -11,9 +11,17 @@
   justify-content: space-between;
   align-items: center;
   border: 2px solid grey;
-  width: 100%;
+  margin-top: 30px;
+  
 }
-
+.select-input-teg {
+  border: none;
+  margin: 0px;
+  font-size: medium;
+  height: 42px;
+  width: 100%;
+  padding-left: 10px;
+}
 .select-dropdown {
   position: absolute;
   display: flex;
@@ -21,16 +29,22 @@
   border: 2px solid grey;
   top: calc(100% + 3px);
   width: 100%;
-  height: 100px;
+  max-height: 200px;
   overflow-y: scroll;
   z-index: 2;
   background-color: white;
 }
 
+.select-dropdown-item {
+  font-size:x-large;
+}
+
 .arrowDown {
+  height: 30px;
   transform: rotate(0deg);
 }
 
 .arrowUp {
+  height: 30px;
   transform: rotate(180deg);
 }
