--- a/currency-converter/src/components/header/style.css
+++ b/currency-converter/src/components/header/style.css
@@ -1,4 +1,4 @@
-.main {
+.main-div {
   display: flex;
   justify-content: center;
 }
@@ -6,10 +6,17 @@
 .header {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   border: 2px solid black;
-  width: 300px;
+  width: 1000px;
+  height: 100px;
+
 }
 
 span {
-  margin: 10px;
+  font-size:xx-large;
+}
+
+.icon {
+  height: 50px;
 }
